<resources>
    <string name="app_name">EconoMe</string>
    <string name="change_language">Change Language</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create account</string>
    <string name="confirm">Confirm</string>
    <string name="update">Update</string>
    <string name="delete_account">Delete account</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="create_manager">Create manager</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="description">Take control of your financial life together with econoMe, the intuitive expense manager that makes it simple to track, manage, and share your budgeting efforts with friends.</string>
    <string name="new_manager">New Manager</string>
    <string name="join_manager">Join Manager</string>
    <string name="add_expense">Add Expense</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="get_id">Get ID</string>
    <string name="update_email">Update email</string>
    <string name="update_password">Update password</string>
    <string name="expense_name">Expense name</string>
    <string name="amount">Amount</string>
    <string name="manager_name">Manager Name</string>
    <string name="total_money">Total Money</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="id_copied">ID copied to clipboard</string>
    <string name="copy">Copy</string>
</resources>